# sensefusion-panel

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  main.c  sensor_daemon.c  ui_app.c
.history/: CLAUDE_20260618172825.md  CLAUDE_20260618172844.md
algo/: anomaly.c  anomaly.h  comfort_index.c  comfort_index.h
app/: app_events.h  app_init.c  app_init.h  daemon_handlers.c  daemon_handlers.h
cmake/: arm-linux-gnueabihf.cmake
common/: app_common.h
daemon/: daemon_handlers.c
docs/: DESIGN.md
fonts/: gen_font.sh  lv_font_sf_sc_14.c  lv_font_sf_sc_16.c  lv_font_sf_sc_28.c
input/: input_ir.c  input_ir.h  input_touch.c  input_touch.h
ipc/: ipc_mq.c  ipc_mq.h  ipc_protocol.h  ipc_shm.c  ipc_shm.h  ipc_socket.c  ipc_socket.h
network/: mqtt_client.c  mqtt_client.h
sensors/: sensor_adxl345.c  sensor_adxl345.h  sensor_dht11.c  sensor_dht11.h  sensor_light.c  sensor_light.h  sensor_sr04.c  sensor_sr04.h  sensor_sr501.c  sensor_sr501.h
sim/: lv_drv_sdl.c  lv_drv_sdl.h  sim_utils.h
storage/: db.c  db.h  eeprom.c  eeprom.h  settings.c  settings.h
ui/: ui_dashboard.c  ui_dashboard.h  ui_handlers.c  ui_handlers.h  ui_ipc.c  ui_ipc.h
